stopped overflow on bottom of page

--- a/index.html
+++ b/index.html
@@ -713,12 +713,15 @@
           padding: 0;
           overflow-x: hidden;
           overflow-y: hidden;
+          background: #333;
       }
       .jquery-console-inner .jquery-console-message { white-space: pre;}
       div.console1 { word-wrap: break-word; }
       div.console1 { font-size: 14px }
+      div.console1 { padding-right: 5%; }
+     
       div.console1 div.jquery-console-inner
-       { width:100vw; height:100vh; background:#333; padding:0.5em;
+       { width:100vw; height:98vh; background:#333; padding:0.5em;
          overflow:auto }
       div.console1 div.jquery-console-prompt-box
        { color:#fff; font-family:monospace; }
