Removed warning message about mkdir not working (as it works)

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
            const help   = new Cmd("help", "list all available commands, or provide a description of a given command\n usage: help <command>");
            const ls     = new Cmd("ls", "list all items in the current directory\nusage: ls <flags>\n type 'man ls' for more details");
            const man    = new Cmd("man", "shows the manual for a given command\n usage: man <command>");
-           const mkdir  = new Cmd("mkdir", "creates a directory with the given name in the current directory.\nusage: mkdir <name>\n STILL IN DEVELOPMENT - WILL NOT WORK!");
+           const mkdir  = new Cmd("mkdir", "creates a directory with the given name in the current directory.\nusage: mkdir <name>");
            const rm     = new Cmd("rm", "removes a given file from the current directory.\nusage: rm <name>\n");
            const touch  = new Cmd("touch", "change file timestamps\n usage: touch <file>");     
            const whoami = new Cmd("whoami", "show the current user\n usage: whoami");
