--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
            var CMDS  = []     
   
            const cat    = new Cmd("cat", "concatenate files and print them to standard output\nusage: cat <file 1> <file 2>...");
-           const echo   = new Cmd("echo", "display a line of text");
+           const echo   = new Cmd("echo", "display a line of text\n usage: echo <text>");
            const evince = new Cmd("evince", "open a pdf file in a new tab\n usage: evince <filepath>");
            const exit   = new Cmd("exit", "close the tab\n usage: exit");
            const groups = new Cmd("groups", "list the groups that you belong to\nusage: groups");
