--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
            var home    = new Item("~", true);
            var secret  = new Item("secret.txt", "82", false, "", false, "tomg.io", "user", "6", "0", "0");
            var isspit1 = new Item("isspit-1.pdf", "454121");
+	   var teaching = new Item("teaching.txt", "1004");
 
            home.items.push(Contact); // Put Contact.txt in the home directory.
            home.items.push(CV); // Put our CV in the home directory.
@@ -146,6 +147,7 @@
            home.items.push(Hey); 
            home.items.push(secret);
            home.items.push(isspit1);
+	   home.items.push(teaching);
 
            // Keep track of which directory we're at! 
            var currentdir = home;      
