--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <script type="text/javascript">
       $(document).ready(function(){
            const MAX_FILESIZE_LENGTH = 6;
-
+	
            // Return the current user
            function curuser() { return currentuser; }
-
+	   // Hey tom - liam
            // Return whether or not a file is empty
            function isEmpty(filename) {
                for(var i = 0; i < currentdir.items.length; i++) {
