--- a/index.html
+++ b/index.html
@@ -132,17 +132,19 @@
            var currentuser = "tomg.io";
 
            // CONSTRUCT THE FILESYSTEM
-           var CV      = new Item("CV.pdf", "149051");
-           var Contact = new Item("contact.txt", "370");
-           var Edu     = new Item("education.txt", "1337");
-           var Hey     = new Item("hey.txt", "775");
-           var home    = new Item("~", true);
-           var secret  = new Item("secret.txt", "82", false, "", false, "tomg.io", "user", "6", "0", "0");
-           var isspit1 = new Item("isspit-1.pdf", "454121");
-	   var teaching = new Item("teaching.txt", "1004");
+           var CV         = new Item("CV.pdf", "149051");
+	   var CV_OnePage = new Item("CV-OnePage.pdf", "159516"); 
+           var Contact    = new Item("contact.txt", "370");
+           var Edu        = new Item("education.txt", "1337");
+           var Hey        = new Item("hey.txt", "775");
+           var home       = new Item("~", true);
+           var secret     = new Item("secret.txt", "82", false, "", false, "tomg.io", "user", "6", "0", "0");
+           var isspit1    = new Item("isspit-1.pdf", "454121");
+	   var teaching   = new Item("teaching.txt", "1004");
 
            home.items.push(Contact); // Put Contact.txt in the home directory.
            home.items.push(CV); // Put our CV in the home directory.
+	   home.items.push(CV_OnePage);
            home.items.push(Edu); 
            home.items.push(Hey); 
            home.items.push(secret);
