--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
            var secret     = new Item("secret.txt", "82", false, "", false, "tomg.io", "user", "6", "0", "0");
            var isspit1    = new Item("isspit-1.pdf", "454121");
 	   var teaching   = new Item("teaching.txt", "1004");
-
+           var PhD_Thesis = new Item("PhD_Thesis.pdf", "17210606"); 
+              
            home.items.push(Contact); // Put Contact.txt in the home directory.
            home.items.push(CV); // Put our CV in the home directory.
 	   home.items.push(CV_OnePage);
@@ -150,6 +151,7 @@
            home.items.push(secret);
            home.items.push(isspit1);
 	   home.items.push(teaching);
+           home.items.push(PhD_Thesis);
 
            // Keep track of which directory we're at! 
            var currentdir = home;      
