--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
    try! :D) let me know and I'll do my best to deploy a fix ASAP <3
        
        If you need some help, type 'help', and you should be gucci. (If not,
-   type 'evince CV.pdf' to open my CV!). Quick hint, 'Ctrl + l' will clear
+   type 'evince CV-OnePage.pdf' to open my CV!). Quick hint, 'Ctrl + l' will clear
    the screen (including this!).
        
        Enjoy! And let me know what you think!
